# LLM4Reverse

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
llm4reverse/: __init__.py  agent.py  cli.py  config.py  llm_client.py  report.py
llm4reverse/audit/: __init__.py  pipeline.py  report.py  scanner.py
llm4reverse/audit/agents/: __init__.py  endpoint_agent.py
llm4reverse/audit/extractors/: __init__.py  regex_extractor.py
llm4reverse/audit/resolvers/: __init__.py  symbol_index.py
llm4reverse/audit/tools/: __init__.py  code_search.py  symbol_lookup.py
llm4reverse/llm/: __init__.py  client.py
llm4reverse/reverse/: __init__.py  config.py  pipeline.py  report.py
llm4reverse/reverse/agents/: __init__.py  har_agent.py
llm4reverse/reverse/analyzers/: __init__.py  js_ast.py  js_beautify.py
llm4reverse/reverse/collectors/: __init__.py  browser.py
llm4reverse/tools/: browser.py  init.py  js_ast.py  js_beautify.py  static_audit.py
scripts/: install_playwright.sh
